# structured_finite_volume

./: CMakeLists.txt  do_cmake.sh  do_cmake_intel.sh  run_vtune.sh  source_deps.sh  source_deps_intel.sh
src/: CMakeLists.txt
src/disc/: disc_block.cc  disc_block.h  disc_interface.cc  disc_interface.h  disc_vector.h  discretization.cc  discretization.h  elem_field.h  face_field.h  vert_field.h
src/linear_system/: assembler.cc  assembler.h  assembler_base.h  bla_wrapper.cc  bla_wrapper.h  large_matrix.cc  large_matrix.h  large_matrix_dense.cc  large_matrix_dense.h  large_matrix_factory.cc  large_matrix_factory.h  large_matrix_petsc.cc  large_matrix_petsc.h  sparsity_pattern.h  sparsity_pattern_dense.h  sparsity_pattern_mesh.cc  sparsity_pattern_mesh.h
src/mesh/: adjacent_block_indexer.h  block_spec.h  neighbor_direction.cc  neighbor_direction.h  structured_block.cc  structured_block.h  structured_block_interface.cc  structured_block_interface.h  structured_mesh.cc  structured_mesh.h
src/nonlinear_solvers/: explicit_euler.cc  explicit_euler.h  explicit_timestepper_opts.cc  explicit_timestepper_opts.h  newton.cc  newton.h  rk2_ssp.cc  rk2_ssp.h
src/physics/: physics_model.cc  physics_model.h
src/physics/advection/: advection_model.cc  advection_model.h  interface_term.cc  interface_term.h  interface_term_jac.cc  interface_term_jac.h  source_term.h
src/physics/common/: flux_limiters.cc  flux_limiters.h  slope_limiters.cc  slope_limiters.h  vec_field.cc  vec_field.h
src/physics/euler/: euler_flux.h  euler_model.cc  euler_model.h  flux_function_enums.cc  flux_function_enums.h  hllc_flux.h  hlle_flux.h  interface_term.cc  interface_term.h  interface_term_jac.cc  interface_term_jac.h  lax_friedrich_flux.h  numerical_flux_base.h  reconstruction.h  reconstruction_enum.cc  reconstruction_enum.h  roe_flux.h  roe_hh_flux.h  roe_state.h  typedefs.h
src/utils/: array3.h  bitwise.h  block_type.cc  block_type.h  cpu_timer.cc  cpu_timer.h  dual_number.h  error_handling.cc  error_handling.h  face_iter_per_direction.cc  face_iter_per_direction.h  face_iterator.cc  face_iterator.h  initialization.cc  initialization.h  math.h  matrix.h  neighbor_direction.cc  neighbor_direction.h  project_defs.h  range.cc  range.h  traits.h  vec.h
test/: CMakeLists.txt  gtest_main.cc
test/integration/: test_advection.cc  test_euler.cc  test_euler_flux_functions.cc  test_face_iter.cc
test/unit/: initial.cc  test_adjacent_block_indexer.cc  test_advection.cc  test_array3.cc  test_assembler.cc  test_bitwise.cc  test_disc.cc  test_disc_block.cc  test_disc_interface.cc  test_disc_vector.cc  test_dual_number.cc  test_euler.cc  test_euler_flux.cc  test_face_iter.cc  test_face_iter_per_direction.cc  test_flux_functions.cc  test_hlle_flux.cc  test_large_matrix_dense.cc  test_large_matrix_petsc.cc  test_limiters.cc  test_math.cc  test_matrix.cc  test_physics_model.cc  test_range.cc  test_reconstruction.cc  test_roe_flux.cc  test_roe_hht_flux.cc  test_roe_state.cc  test_structured_block.cc  test_structured_block_interface.cc  test_structured_mesh.cc  test_vec.cc
test/utils/: jacobian.h  multi_block_fixture.cc  multi_block_fixture.h  rotation_utils.h  utils.cc
